tests/ui/item-is-not-a-function.rs
#[contracts::contracts]
struct S;

fn main() {}
